<resources>
    <string name="search_place">"Type place name "</string>
    <string name="occurrences">Occurrences</string>
    <string name="location_based_on_gps">Location based on GPS</string>
    <string name="location_based_on_search">Search location</string>
    <string name="stored_locations">Stored locations</string>
    <string name="location_general_error">Can not obtain location</string>
    <string name="location_notice">Currently we have location support from Android 6 devices</string>
    <string name="place_found">%s - %s</string>
    <string name="location_permission_required">Location permission is required</string>
    <string name="location_permission_message">Location permission it is necessary for seaching places</string>
    <string name="location_permission_ok">Provides permission</string>
    <string name="location_permission_cancel">Cancel</string>
    <string name="discover_our_restaurants">Discover our restaurants</string>
    <string name="discover_our_restaurants_message">You cand find our sponsors typing out their names or using your location</string>
    <string name="enable_my_location">Enable my location</string>
    <string name="obtaining_location_title">We\'re obtaining your location</string>
    <string name="obtaining_location_message">It could take a few minutes</string>
</resources>